# bwt2lcp

./: CMakeLists.txt  README.md  bwt2lcp.cpp  merge_bwt.cpp
internal/: bwt_merger.hpp  dna_bwt_n.hpp  dna_string.hpp  dna_string_n.hpp  include.hpp  lcp.hpp
